--- a/week3/test-sinFlower/index.html
+++ b/week3/test-sinFlower/index.html
@@ -4,7 +4,7 @@
 <body>
     <!-- The Canvas tag sets up a screen in the browser that we can draw to. -->
     <canvas id="canvas"></canvas>
-
+    <script src="libraries/perlin.js" type="text/javascript"></script>
     <script src="script.js" type="text/javascript"></script>
 
 </body>
