--- a/week3/test-JW-algorithm/index.html
+++ b/week3/test-JW-algorithm/index.html
@@ -6,7 +6,7 @@
     <canvas id="canvas"></canvas>
 
     <script src="script.js" type="text/javascript"></script>
-
+    <script src="JWCircle.js" type="text/javascript"></script>
 </body>
 
 </html>
