--- a/week4/MandelbrotSet-slow-mimic/index.html
+++ b/week4/MandelbrotSet-slow-mimic/index.html
@@ -5,17 +5,12 @@
 
 <style>
 
-/*  
-    This is to make sure
-    the canvas is in the right position
-    on all browsers    
-*/
-
 canvas {
 position: absolute;
-top:0;
+top:180px;
 left:0;
 }
+
 
 </style>
 
