--- a/week4/JuliaSet-mimic/index.html
+++ b/week4/JuliaSet-mimic/index.html
@@ -18,7 +18,7 @@ left:0;
 
     <canvas></canvas>
     <script src="script.js" type="text/javascript"></script>
-    <h1>CC W4 - Julia Set Explorations </h1>
+    <h1>CC W4 - Julia Set + Mouse Interaction </h1>
     <h2>Nan Zhao</h2>
     <a href="https://en.wikipedia.org/wiki/Julia_set#:~:text=four%20different%20classes.-,Equivalent%20descriptions%20of%20the%20Julia%20set,." target="_blank">Wiki: Julia Set</a>
 
