--- a/week6/threeJS-1/index.html
+++ b/week6/threeJS-1/index.html
@@ -4,14 +4,6 @@
     <!-- This is an HTML comment -->
     <!-- Below we are grabbing three.js and some helper stuff for using the camera -->
 <!--    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/109/three.min.js"></script>-->
-<!--    <script type="module">-->
-<!--        //import * as THREE from 'https://cdnjs.cloudflare.com/ajax/libs/three.js/109/three.min.js';-->
-<!--        //import * as THREE from 'https://threejsfundamentals.org/threejs/resources/threejs/r122/build/three.module.js';-->
-<!--        // Find the latest version by visiting https://unpkg.com/three. The URL will-->
-<!--        // redirect to the newest stable release.-->
-<!--        import * as THREE from 'https://unpkg.com/three@0.123.0/build/three.module.js'-->
-<!--        //import * as THREE from 'https://cdnjs.cloudflare.com/ajax/libs/three.js/109/three.min.js';-->
-<!--    </script>-->
     <meta charset="utf-8">
     <style>
         body {
@@ -19,12 +11,28 @@
             background-color: #000000;
             overflow: hidden;
         }
+        .split {
+            position: absolute;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            display: flex;
+        }
+        .split>div {
+            width: 100%;
+            height: 100%;
+        }
     </style>
 </head>
 
 <body>
 <script type="module" src="script.js" type="text/javascript"></script>
 <canvas id="c"></canvas>
+<div class="split">
+    <div id="view1" tabindex="1"></div>
+    <div id="view2" tabindex="2"></div>
+</div>
 </body>
 
 </html>
