--- a/week6/threeJS-7-particles/index.html
+++ b/week6/threeJS-7-particles/index.html
@@ -29,10 +29,32 @@
             width: 100%;
             height: 100%;
         }
+
+        #info {
+            position: absolute;
+            top: 0px;
+            width: 100%;
+            padding: 10px;
+            box-sizing: border-box;
+            text-align: left;
+            z-index:1;
+            color: aliceblue;
+            font-family: "Lucida Console", "Courier New", monospace;
+        }
+        #info p {
+            margin:0px;
+        }
+        #info h1 {
+            margin:5px;
+        }
     </style>
 </head>
 
 <body>
+<div id="info">
+    <h1>W7-Having fun with three.js</h1>
+    <p>Nan 2020.12</p>
+</div>
 <script type="module" src="Glass.js" type="text/javascript"></script>
 <script type="module" src="Firefly.js" type="text/javascript"></script>
 <script type="module" src="script.js" type="text/javascript"></script>
