refine the css and instruction text

--- a/week6/threeJS-7-particles/index.html
+++ b/week6/threeJS-7-particles/index.html
@@ -38,6 +38,8 @@
             box-sizing: border-box;
             text-align: left;
             z-index:1;
+            user-select: none;
+            pointer-events: none;
             color: aliceblue;
             font-family: "Lucida Console", "Courier New", monospace;
         }
@@ -53,6 +55,7 @@
 <body>
 <div id="info">
     <h1>W7-Having fun with three.js</h1>
+    <p>Try zooming in&out and dragging</p>
     <p>Nan 2020.12</p>
 </div>
 <script type="module" src="Glass.js" type="text/javascript"></script>
