--- a/week7/13-GLSL-shapes-lines/index.html
+++ b/week7/13-GLSL-shapes-lines/index.html
@@ -61,62 +61,52 @@
         uniform vec2 resolution;
         uniform vec2 mouse;
         uniform highp float time;
-        
+		#define M_PI 3.14159265358979323846
+
+
+
+        //we can create a 3D shape  with sin function in multiple dimensions
+        float line(vec2 pos, float funct) {
+			//If wanted a smooth line, I could use smoothstep.
+            //but step() is more efficient
+            float lineWidth = 0.02;
+           return step(funct,pos.y)-step(funct,pos.y-lineWidth);
+        }
+
+		//===!!! we can create a 3D shape  with sin function in multiple dimensions
+		float noiseLine(vec2 pos, float funct) {
+			float lineWidth = 0.02;
+			return step(funct,pos.y)-step(funct,pos.y-lineWidth);
+		}
+
+		//https://en.wikipedia.org/wiki/Ikeda_map
+		 float u = 0.9;
+		const int MAX_ITERATIONS = 256;
+        float ikedaMap(vec2 pos){
+			float t = 0.0;
+			for(int i = 0; i < MAX_ITERATIONS; i++){
+				t = 0.4 - 6. / ( 1. + pos.x * pos.x + pos.y * pos.y);//pow(pos.x,2.0)
+				pos.x = 1. + u*(pos.x * cos(t) - pos.y * sin(t));
+				pos.y = u * (pos.x * sin(t) + pos.y * cos(t));
+
+				if(length(pos)>1.0 && length(pos)<1.1){
+					return length(pos);
+				}
+			}
+			return 0.0;
+		}
         void main(){
             
-        	vec2 normCoord = gl_FragCoord.xy/resolution;
-			float aspect = resolution.x/resolution.y;
-			vec2 translate = resolution.xy/2.;
-			vec2 pos = (gl_FragCoord.xy - translate);//translate to the centre
-			pos = pos/resolution;//get the new normCoordinate pos in the centre
-
-			//cos(length(pos / mouse.y) * 25.);
-			float angle = atan(pos.y,pos.x); //float radius = atan(sin(length(pos * mouse.y) * 25.));
-			float petals = cos(angle*mouse.x * 25.);
-
-			float mouseNormX = mouse.x / resolution.x;
-			float modX = 2.0* (1.+mouseNormX); ;//* abs(cos(time*0.1 +1.)) ;//* (1.+mouseNormX);越大，间隙越小
-			float modY = 0.5 * modX ;//大小决定被cutout的成都
-
-			vec3 finalColor;
-			//vec3 colour = vec3(step(petals,radius) ) * finalColor;
-			float stepVal = 10.;
-			float smoothVal = stepVal * 0.1;
-			float i2 = 0.0;
-
-			for (int i=0; i < 3; i ++){
-				vec2 pTemp =  pos;//mod(pos, vec2(modX)) - vec2(modY);// pos;
-				float l = dot(pTemp,pTemp);
-
-				//=====effect 2
-				pTemp = pTemp /  l*(sin(time)+1.)* abs(sin( l*i2*i2- time));
-
-				vec2 pTemp2 = mod(pos, vec2(modX)) - vec2(modY);
-				float timeOffset = time * (0.5 + abs(sin(time)));
-				pTemp2 += pos/l*(sin(timeOffset)+1.)*abs(sin(l *i2*i2 - timeOffset*2.));
-
-				//====effect 1
-//				vec2 pTemp = mod(pos, vec2(modX)) - vec2(modY);
-//				float l = dot(pTemp,pTemp);
-//				float colour = smoothstep(stepVal, stepVal+smoothVal, l);
-//				float radius = length(l)* 5.0 * pow(l , i2);//float pow(float x, float y) = x^y
-//				pTemp *= abs(sin(l*time*0.1));
-
-//				vec3 color2 = .05 * (1. + i2)/length(log(pTemp2));
-				finalColor[i] = .01 * (1. + i2)/length(log(pTemp)) + .01 * (1. + i2)/length(log(pTemp2));//exp(pTemp
-				//c[i]=.01/length(abs(mod(uv,1.)-.5));
-				i2 += 1.0;
-			}
-
-			gl_FragColor=vec4(finalColor,exp(sin(time*0.1)));
+        	vec2 pos = gl_FragCoord.xy/resolution;
+            //float y = 0.5+ (sin(pos.x*M_PI*2.) * 0.5);//a complete sinwave
+			float y =  abs(0.1 / sin(sin(pos.y+time)*0.1)* 0.2);
+			//float line = noiseLine(pos,y);//y = funct
+			float ikedaColour = ikedaMap(pos);
 
 
-			//===========BELOW IS THE SHADER
-			/*
-			The shader inspired me: Danilo Guanabara
-			*/
-
-
+			gl_FragColor = vec4(vec3(ikedaColour),1.0);
+            //like maxilian, just add different shapes
+        	//gl_FragColor = vec4(vec3(line),1.0);
         }
 		//============================================================
 		//END OF GLSL CODE
@@ -154,8 +144,7 @@
 			renderer.setSize(window.innerWidth, window.innerHeight);
 			uniforms.resolution.value.x = renderer.domElement.width;
 			uniforms.resolution.value.y = renderer.domElement.height;
-			//console.log(uniforms.resolution.value.x);
-			//console.log(window.innerWidth);
+
 		}
 		function animate() {
 			requestAnimationFrame(animate);
