--- a/week7/1-GLSL-inclass-distanceField/index.html
+++ b/week7/1-GLSL-inclass-distanceField/index.html
@@ -116,10 +116,10 @@ void main(void)
     //colour = step(1.0, colour);
 
 //=============SMOOTHSTEP
-    //another built-in function: smoothstep
-    //vec2 smoothstep(vec2 edge0, vec2 edge1, vec2 x)
-	//float smoothstep(float edge0, float edge1, float x)
-	// returns 0.0 if x is smaller than edge0 and 1.0 if x is larger than edge1. Otherwise the return value is interpolated between 0.0 and 1.0 using Hermite polynomials.
+    //==another built-in function: smoothstep
+    //==vec2 smoothstep(vec2 edge0, vec2 edge1, vec2 x)
+	//==float smoothstep(float edge0, float edge1, float x)
+	//==returns 0.0 if x is smaller than edge0 and 1.0 if x is larger than edge1. Otherwise the return value is interpolated between 0.0 and 1.0 using Hermite polynomials.
     //colour = smoothstep(0.98,1.0,colour);
 
 //========CHANGE COLOR on Y
@@ -135,9 +135,12 @@ void main(void)
     }else{
         colour = colourY;
     }
-	//->how to make the edge smoother in this case??? (change in Y dimension)
 
-    gl_FragColor = vec4(vec3(colour), 1.0);
+	float colour2 =  distance(gl_FragCoord.xy, pos);
+	colour2 *= 0.01;
+	colour2 = smoothstep(0.97,1.0,colour2);
+	//->how to make the edge smoother in this case??? (change in Y dimension)
+    gl_FragColor = vec4(vec3(colour)+vec3(colour2), 1.0);
 	//=====
 	//gl_FragColor = vec4(abs(sin(time)),0.0,0.0,1.0);
 }
