--- a/week7/14-GLSL-ikedaMap-1/index.html
+++ b/week7/14-GLSL-ikedaMap-1/index.html
@@ -63,22 +63,6 @@
         uniform highp float time;
 		#define M_PI 3.14159265358979323846
 
-
-
-        //we can create a 3D shape  with sin function in multiple dimensions
-        float line(vec2 pos, float funct) {
-			//If wanted a smooth line, I could use smoothstep.
-            //but step() is more efficient
-            float lineWidth = 0.02;
-           return step(funct,pos.y)-step(funct,pos.y-lineWidth);
-        }
-
-		//===!!! we can create a 3D shape  with sin function in multiple dimensions
-		float noiseLine(vec2 pos, float funct) {
-			float lineWidth = 0.02;
-			return step(funct,pos.y)-step(funct,pos.y-lineWidth);
-		}
-
 		//https://en.wikipedia.org/wiki/Ikeda_map
 		 float u = abs(cos(1.0 / time*0.1));//0.9;
 		const int MAX_ITERATIONS = 100;
@@ -99,21 +83,18 @@
 			vec2 normCoord = gl_FragCoord.xy/resolution;
 			float aspect = resolution.x/resolution.y;
 			vec2 translate = resolution.xy/2.;
-			//vec2 pos = (gl_FragCoord.xy - translate);
 
-        	vec2 pos = gl_FragCoord.xy/resolution;
-			//vec2 posOffset = vec2(abs(cos(time*0.1)));
-			//pos += posOffset;
-            //float y = 0.5+ (sin(pos.x*M_PI*2.) * 0.5);//a complete sinwave
-			float y =  abs(0.1 / sin(sin(pos.y+time)*0.1)* 0.2);
-			//float line = noiseLine(pos,y);//y = funct
-//
-			//float ikedaColour = ikedaMap(pos);
-			float ikedaColour = smoothstep( ikedaMap(pos,1.05), ikedaMap(pos,1.05)*1.5,length(pos));
+			float angle = M_PI * time * 0.1;
+			mat2 rotation = mat2(cos(angle), sin(angle),
+			-sin(angle), cos(angle));
 
-			vec2 pos2 = (gl_FragCoord.xy - translate);
-			float ikedaColour2  =ikedaMap(pos2,1.1);
-			gl_FragColor = vec4(vec3(ikedaColour)*vec3(ikedaColour2),1.0);
+        	vec2 pos = rotation * (gl_FragCoord.xy/resolution);
+
+			float ikedaColour =  1. - smoothstep( ikedaMap(pos,1.3), ikedaMap(pos,1.3)*1.5,length(pos));
+
+			vec3 rgb=vec3(0.7,0.1*sin(1.0*pos.y)+0.3,sin(pos.x+pos.y)+0.2);
+			vec3 bg = rgb * abs(sin(time * 0.2));
+			gl_FragColor = vec4(vec3(ikedaColour)* rgb + bg,(sin(time + 1.0)));
             //like maxilian, just add different shapes
         	//gl_FragColor = vec4(vec3(line),1.0);
         }
