--- a/week7/15-GLSL-ikedaMap-2/index.html
+++ b/week7/15-GLSL-ikedaMap-2/index.html
@@ -100,22 +100,24 @@
 			float aspect = resolution.x/resolution.y;
 			vec2 translate = resolution.xy/2.;
 			//vec2 pos = (gl_FragCoord.xy - translate);
+			float mouseNormX = mouse.x/resolution.x;
+			for (int i = 0; i < 4; i ++){
+			}
+			float angle = M_PI * mouse.x;//mouseNormX;
+			mat2 rotation = mat2(cos(angle), sin(angle),
+			-sin(angle), cos(angle));
+			vec2 pos2 =rotation *  (gl_FragCoord.xy - translate);
+			float ikedaColour2  = ikedaMap(pos2,1.2);
 
-        	vec2 pos = gl_FragCoord.xy/resolution;
-			//vec2 posOffset = vec2(abs(cos(time*0.1)));
-			//pos += posOffset;
-            //float y = 0.5+ (sin(pos.x*M_PI*2.) * 0.5);//a complete sinwave
-			float y =  abs(0.1 / sin(sin(pos.y+time)*0.1)* 0.2);
-			//float line = noiseLine(pos,y);//y = funct
-//
-			//float ikedaColour = ikedaMap(pos);
-			float ikedaColour = smoothstep( ikedaMap(pos,1.05), ikedaMap(pos,1.05)*1.5,length(pos));
+			angle += M_PI;
+			rotation = mat2(cos(angle), sin(angle), -sin(angle), cos(angle));
+			vec2 pos3 =rotation *  (gl_FragCoord.xy - translate);
+			float ikedaColour3  =ikedaMap(pos3,1.2);
 
-			vec2 pos2 = (gl_FragCoord.xy - translate);
-			float ikedaColour2  =ikedaMap(pos2,1.1);
-			gl_FragColor = vec4(vec3(ikedaColour)*vec3(ikedaColour2),1.0);
-            //like maxilian, just add different shapes
-        	//gl_FragColor = vec4(vec3(line),1.0);
+			//vec3 filterColor = vec3(0.9*abs(sin(time*0.1)), 0.9*abs(sin(time*0.1 )), 0.9 * abs(sin(time*0.1)*cos(time*0.1)));
+			//r => 0.5 ~ 0.8
+			vec3 filterColor = vec3(0.5+0.3*sin(time),0.8+ 0.1 * sin(time),0.9);
+			gl_FragColor = vec4((vec3(ikedaColour2) + vec3(ikedaColour3)) + filterColor,1.);
         }
 		//============================================================
 		//END OF GLSL CODE
