--- a/week8/5-hw-moreLightingUsingVertexNormal/index.html
+++ b/week8/5-hw-moreLightingUsingVertexNormal/index.html
@@ -29,9 +29,9 @@
 		uniform highp float time;
         #define M_PI 3.14159265358979323846
 
-		
+
 		float rand(vec3 x) {
-        
+
         // This uses frequency modulation, but with dot product distance to generate
         // A single value from a vector
             return abs(sin(cos(dot(x,mouse.xyx))* 100.));
@@ -42,7 +42,7 @@
 
 		    float angle = time;
 		    //rotation
-			//❓❓❓❓why mat 4 here?????
+			//❓why mat 4 here?????=> the last is for "w", scaling.
             mat4 rotateX = mat4(
 				1,0,0,0,
 				0,cos(angle),sin(angle),0,
@@ -85,13 +85,13 @@
 		    //👇original code
 			myNormal = normalize(rotatedPos.xyz*1.2);
 
-            // three.js provides the projection Matrix and the model View matrix. 
+            // three.js provides the projection Matrix and the model View matrix.
             // We just pipe in our positions
             // We can also add a little bit of the normal so that
             // We can get direction vectors of the surface
             // We don't really need to do that all the time
             // But it's a good technique to be aware of
-            
+
 			gl_Position = projectionMatrix * modelViewMatrix * vec4(rotatedPos.xyz,1.);
 		}
 
@@ -101,7 +101,7 @@
 		//PUT YOUR GLSL CODE HERE
 		//============================================================
 
- 	
+
 		precision highp float;
         uniform vec2 mouse;
         uniform float time;
@@ -119,14 +119,14 @@
 			// Get the normal of the light
 			// Remember the Unit Vector of the light is the direction of the light
 			light = normalize(light);
-			
+
 			// return the maximum of either 0, or the squared distance
 			//use the max, 来去除掉一些黑色，这样最暗的是灰色，会自然一点
 		    float prod = max(0., dot(myNormal,light));
             // use the dot product of the normal and the light
             // To calculate the shading for the sphere
 			gl_FragColor = vec4(prod, prod, prod, 1.0) + vec4(vec3(0.15),1.);
-			
+
 		}
 		//============================================================
 		//END OF GLSL CODE
@@ -156,7 +156,7 @@ uniforms = { time: { type: 'f', value: 1.0 }, resolution: { type: 'v2', value: n
 			mesh = new THREE.Mesh(geometry, material);
 			scene.add(mesh);
 			renderer = new THREE.WebGLRenderer();
-			//Hack here to change resolution 
+			//Hack here to change resolution
 			renderer.setPixelRatio(window.devicePixelRatio / pixel_resolution);
             //renderer.context.enable(renderer.context.DEPTH_TEST);
 			container.appendChild(renderer.domElement);
